monitor/local/manifests/prometheus/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: prom.dev.test
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
